--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot>=20.0
+python-telegram-bot[job-queue]>=20.0
 httpx>=0.24.0
 beautifulsoup4>=4.12.0
 lxml>=4.9.0
@@ -6,3 +6,4 @@ openai>=1.0.0
 Pillow>=10.0.0
 pytz>=2023.3
 python-dotenv>=1.0.0
+apscheduler>=3.10.0
